<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/fragment_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"  >

            <RadioButton
                android:id="@+id/rBtn_Eating_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mothersmilk" />

            <RadioButton
                android:id="@+id/rBtn_Eating_mp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milkpowder"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <RadioButton
                android:id="@+id/rBtn_Eating_bf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/babyfood"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Eating_mm_radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rBtn_Eating_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/eating_type_direct" />

            <RadioButton
                android:id="@+id/rBtn_Eating_bottle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eating_type_bottle"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Eating_volume"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin_qhalf" >

        <Button
            android:id="@+id/btn_Eating_minus_small_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_small_ml"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_Eating_minus_big_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_big_ml"
            android:textSize="@dimen/text_size_10" />

        <EditText
            android:id="@+id/editText_Eating_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="number"
            android:text="80ml"
            android:textSize="@dimen/text_size_15" />

        <Button
            android:id="@+id/btn_Eating_plus_small_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_small_ml"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_Eating_plus_big_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_big_ml"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin_qhalf"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/txtView_Eating_stime_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/stime_titile"
            android:textSize="@dimen/text_size_10" />

        <TextView
            android:id="@+id/txtView_Eating_etime_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/etime_titile"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dip"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/txtView_Eating_stime"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="@dimen/text_size_25"
            android:gravity="center" />

        <TextView
            android:id="@+id/txtView_Eating_etime"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:textSize="@dimen/text_size_25" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin_qhalf">

        <Button
            android:id="@+id/btn_Eating_minus_small_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_small_time"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_Eating_minus_big_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_big_time"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_Eating_plus_small_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_small_time"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_Eating_plus_big_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_big_time"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin_qhalf" >

        <TextView
            android:id="@+id/txtView_Eating_Memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/editText_Eating_Memo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_hint" />
    </LinearLayout>

</LinearLayout>