<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.babytimechart.ui.RoundChartView
        android:id="@+id/roundchartview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgview_legend_eat"
            android:layout_width="15dip"
            android:layout_height="15dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin_qhalf"
            android:text="@string/eating" />

        <ImageView
            android:id="@+id/imgview_legend_play"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin_qhalf"
            android:text="@string/playing" />

        <ImageView
            android:id="@+id/imgview_legend_sleep"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin_qhalf"
            android:text="@string/sleeping" />


        <ImageView
            android:id="@+id/imgview_legend_etc"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin_qhalf"
            android:text="@string/etc" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewMemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/notice"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="@color/main_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4" >

        <Button
            android:id="@+id/feedingBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eating"
            android:textColor="@color/chart_btn_text_color"
            android:textSize="15dip" />

        <Button
            android:id="@+id/playingBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playing"
            android:textColor="@color/chart_btn_text_color"
            android:textSize="15dip" />

        <Button
            android:id="@+id/sleepingBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sleeping"
            android:textSize="15dip"
            android:textColor="@color/chart_btn_text_color"/>

        <Button
            android:id="@+id/etcBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/etc"
            android:textSize="15dip"
            android:textColor="@color/chart_btn_text_color"/>
    </LinearLayout>

</LinearLayout>